--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,193 @@
 
 body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, legend, p, select, table, th, td, tr, textarea, button, form {margin: 0; padding: 0;}
 
-.container {max-width: 1200px; width: 1200px; margin: 0 auto; z-index: 2;}
+/*가운데 영역*/
+.container {max-width: 1200px; margin: 0 auto; }
 
-
-#wrap {position: relative; background-image: url("img/sec1_img1.jpg"); }
-#section1 {height:130vh;}
-header {position: relative; padding: 20px; color: #fff;}
-.sec1 {display: flex;}
-.sec1 .sec1_cont {width: 100%; position: relative; padding-top: 12%; display: flex; justify-content: flex-end;}
-.sec1 .sec1_cont .sec1_text {position: absolute; left: 0; top: 35%; color: #fff;}
-.sec1 .sec1_cont .sec1_text h3 {font-size: 55px; font-weight: 600; width: 67%; line-height: 1.3; padding-bottom: 40px; letter-spacing: 0.1em;}
-.sec1 .sec1_cont .sec1_text p {font-size: 18px; font-weight: 300; width: 67%; line-height: 1.3; padding-bottom: 25px; letter-spacing: 0.1em;}
-.sec1 .sec1_cont .sec_img { width: 40%;}
-.sec1 .sec1_cont .sec_img img {width: 100%; height: 900px;}
+/*레이아웃*/
+#wrap {position: relative; background: #efecea; }
+#section1 {height:130vh; }
 #section2 {padding: 20% 0 15% 0; }
-.sec2 {position: relative;}
-.sec2 .sec2_img {}
-#section3 { padding: 12% 0;}
-#section4 {padding: 15% 0;}
+#section3 {background: #fff; padding: 12% 0;}
+#section4 {padding: 15% 0; }
 #section5 {background: #fff; padding: 15% 0 20% 0; }
+#section6 {background: #efecea; padding: 13% 0 4% 0;}
+
+/*section1*/
+/*header*/
+#header {position: relative; padding: 20px;}
+#header h1 {
+    position: absolute; 
+    font-size: 40px; 
+    font-family:'CanvasBlack'; 
+    color: #3a3c49; 
+    padding: 30px 60px; 
+    cursor: pointer;
+}
+#header h1:hover {color:#fff;}
+#header p  {
+    color: #79726e; 
+    text-align: center; 
+    font-size: 12px; 
+    font-weight: 300;  
+    letter-spacing: 0.3em; 
+    font-family: 'Roboto', sans-serif; 
+    color: #3a3c49;
+    text-transform: uppercase;
+    padding: 50px 0;
+}
+
+/*sec1*/
+.sec1 .sec1_cont {overflow: hidden; position: relative; padding-top: 12%;}
+.sec1 .sec1_cont .sec1_txt {position: absolute; left: 0; top: 45%;}
+.sec1 .sec1_cont .sec1_txt h3 {
+    font-size: 55px; font-family:'CanvasLight'; 
+    font-weight: 600; 
+    color: #3a3c49;
+    width: 75%;
+    line-height: 1.3;
+    padding-bottom: 40px;
+    letter-spacing: 0.01em;
+} 
+.sec1 .sec1_cont .sec1_txt p {
+    width: 45%; 
+    font-size: 18px; 
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #79726e;
+    letter-spacing: 0.03em;
+    padding-bottom: 25px;
+}
+.sec1 .sec1_cont .sec1_txt span {
+    position: relative;
+    color: #d43246;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.1em;
+    padding-left: 55px;
+    cursor: pointer;
+}
+.sec1 .sec1_cont .sec1_txt span::before {
+    content: '';
+    width: 30px; height: 1px; 
+    background: #d43246; 
+    position: absolute; left: 0; top: 7px;
+}
+.sec1 .sec1_cont .sec1_img {display: block; float: right; width: 40%;}
+.sec1 .sec1_cont .sec1_img img {max-width: 100%; }
+
+
+/*section2*/
+.sec2 {position: relative; }
+.sec2 .sec2_img {display: block; width: 40%;}
+.sec2 .sec2_img img {max-width: 100%; }
+
+.sec2 .sec2_txt {
+    position: absolute; left: 200px; top: -60px;
+}
+.sec2 .sec2_txt h2 {
+    font-size: 110px;
+    font-family:'CanvasRegular';
+    color: #fff;
+    white-space: nowrap;
+    padding: 50px 0 0 60px;
+}
+.sec2 .sec2_txt h3 {
+    font-size: 50px; 
+    font-family:'CanvasLight';  
+    font-weight: 600; 
+    color: #3a3c49;
+    letter-spacing: 0.01em;
+    white-space: nowrap;
+    padding: 10% 0 0 34%
+    
+}
+.sec2 .sec2_txt p {
+    font-size: 16px; 
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #79726e;  
+    text-align: left;
+    padding: 4% 0 0 35%;
+    line-height: 1.7;
+}
+
+.sec2 .sec2_study {
+    position: relative;
+    width: 600px;
+    position: absolute; top: 50%; left: 46%;
+    display: flex;  
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 30px;
+    color: #7d7571;
+    font-family:'BentonModDisp-Light'; 
+    letter-spacing: 0.15em;
+}
+.sec2 .sec2_study i {
+    font-size: 6px;
+    color: #999;
+    padding-right: 10px;
+    vertical-align: 2px;
+}
+
+/* section3 */
+.sec3 h2 {
+    font-size: 80px;  
+    font-family:'CanvasBlack'; 
+    color: #3a3c49; 
+    text-align: center;
+    padding-bottom: 60px;
+    letter-spacing: 0.05em;
+}
+.sec3 .sec3_moc {
+    position: relative; 
+    display: flex;
+    flex-wrap: wrap; justify-content: space-between;
+}
+.sec3 .mockup {
+    position: relative; 
+    width: 47.5%; 
+    float: left;
+}
+.sec3 .mockup:nth-child(even){margin-right: 0;}
+.sec3 .mockup:nth-child(2) {margin-top: 34vh;}
+.sec3 .mockup:nth-child(3) {margin-top: -8vh;}
+.sec3 .mockup:nth-child(4) {margin-top: 28vh;}
+.sec3 .mockup:nth-child(5) {margin-top: -8vh;}
+.sec3 .mockup:nth-child(6) {margin-top: 28vh;}
+
+.sec3 .mockup .sec3_img {overflow: hidden;}
+.sec3 .mockup .sec3_img img {width: 100%; transform: scale(1); transition: all .8s cubic-bezier(.37, .16, .12, 1);}
+.sec3 .mockup .sec3_img img:hover {transform: scale(1.1); transition: all .8s cubic-bezier(.37, .16, .12, 1);}
+
+.sec3 .mockup .sec3_tit .titAni.White{
+    position: relative; z-index: 10;
+    font-size: 40px;
+    font-family: 'Sulphur Point', sans-serif;
+    font-weight: 600;
+    white-space: nowrap;
+    letter-spacing: -0.03em;
+    line-height: 1;
+    margin-left: 20px;
+    top: 15px;
+    text-transform: uppercase;
+}
+.sec3 .sec3_moc .mockup .desc {
+    position: relative;
+    background: #999;
+    color: #fff;
+    margin-left: 5vw;
+    margin-top: -2vw;
+    padding: 1.5vw;
+    position: relative; 
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    white-space: nowrap;
+}
+.sec3 .sec3_moc .mockup .desc a {color: #fff; cursor: pointer; font-size: 15px; font-weight: bold;}
+.sec3 .sec3_moc .mockup .desc span {
+    color: #666363;
+    position: absolute; top: 30px; right: 35px;
+    cursor: pointer;
+}
