--- a/css/main.css
+++ b/css/main.css
@@ -191,3 +191,59 @@ body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, lege
     position: absolute; top: 30px; right: 35px;
     cursor: pointer;
 }
+
+
+/*section4*/
+.sec4 {position: relative;}
+.sec4 .sec4_img {display: block; width: 40%;}
+.sec4 .sec4_img img {max-width: 100%; }
+.sec4 .sec4_txt {
+    position: absolute; left: 200px; top: -90px;
+}
+.sec4 .sec4_txt h2 {
+    font-size: 110px;
+    font-family:'CanvasRegular'; 
+    color: #fff; 
+    white-space: nowrap;
+    letter-spacing: -0.03em;
+    padding-left: 5%;
+}
+.sec4 .sec4_txt h3 {
+    font-size: 120px;   
+    font-weight: 500; 
+    font-family: 'CHONBUKL';
+    color: #fff;
+    padding: 16% 0 0 35%;
+    line-height: 0.7;
+}
+.sec4 .sec4_txt p {
+    font-size: 16px; 
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #79726e;
+    text-align: left;
+    padding: 0 0 0 35%;
+    line-height: 1.7;
+}
+
+.sec4 .sec4_skill {
+    width: 600px;
+    position: absolute; bottom: 5%; left: 46%;
+    display: flex;  
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: 300;
+    color:  #d43246;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.05em;
+    line-height: 1.7;
+
+}
+.sec4 .sec4_skill ul li {position: relative; padding-left: 50px;}
+.sec4 .sec4_skill ul li::before {
+    content: '';
+    width: 30px; height: 1px;
+    background: #d43246;
+    position: absolute; left: 0; top: 14px;
+}
