--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, lege
 #section3 {padding: 12% 0;}
 #section4 {padding: 15% 0;}
 #section5 {background: #fff; padding: 15% 0 20% 0; }
-#section6 {background: #efecea; padding: 13% 0 4% 0;}
+#section6 {background: burlywood; padding: 13% 0 4% 0;}
 
 /*section1*/
 /*header*/
@@ -246,4 +246,25 @@ body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, lege
     width: 30px; height: 1px;
     background: #d43246;
     position: absolute; left: 0; top: 14px;
+}
+
+.sec6 {text-align: center;}
+.sec6 h2 {
+    font-size: 80px; 
+    font-weight: 600; 
+    font-family:'CanvasLight';
+    color: #3a3c49;
+    line-height: 1.0;
+    letter-spacing: 0.03em;
+    padding-bottom: 50px;
+}
+.sec6 span {
+    font-size: 18px;
+    color: #d43246;
+    cursor: pointer;
+}
+.sec6 p {
+    font-size: 12px;
+    color: #79726e;
+   padding-top: 180px;
 }
