--- a/css/main.css
+++ b/css/main.css
@@ -1,63 +1,107 @@
-
-body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, legend, p, select, table, th, td, tr, textarea, button, form {margin: 0; padding: 0;}
-
 /*가운데 영역*/
-.container {max-width: 1200px; margin: 0 auto; }
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
 /*레이아웃*/
-#wrap {position: relative; background: #efecea; }
-#section1 {height:130vh; }
-#section2 {padding: 20% 0 15% 0; }
-#section3 {padding: 12% 0;}
-#section4 {padding: 15% 0;}
-#section5 {background: #fff; padding: 15% 0 20% 0; }
-#section6 {background: burlywood; padding: 13% 0 4% 0;}
+#wrap {
+    position: relative;
+    background: #efecea;
+}
+
+#section1 {
+    height: 130vh;
+}
+
+#section2 {
+    padding: 20% 0 15% 0;
+}
+
+#section3 {
+    padding: 12% 0;
+}
+
+#section4 {
+    padding: 15% 0;
+}
+
+#section5 {
+    background: #fff;
+    padding: 15% 0 20% 0;
+}
+
+#section6 {
+    background: burlywood;
+    padding: 13% 0 4% 0;
+}
 
 /*section1*/
 /*header*/
-#header {position: relative; padding: 20px;}
-#header h1 {
-    position: absolute; 
-    font-size: 40px; 
-    font-family:'CanvasBlack'; 
-    color: #3a3c49; 
-    padding: 30px 60px; 
+header {
+    position: relative;
+    padding: 20px;
+}
+
+header h1 {
+    position: absolute;
+    font-size: 40px;
+    font-family: 'CanvasBlack';
+    color: #3a3c49;
+    padding: 30px 60px;
     cursor: pointer;
 }
-#header h1:hover {color:#fff;}
-#header p  {
-    color: #79726e; 
-    text-align: center; 
-    font-size: 12px; 
-    font-weight: 300;  
-    letter-spacing: 0.3em; 
-    font-family: 'Roboto', sans-serif; 
+
+header h1:hover {
+    color: #fff;
+}
+
+header p {
+    color: #79726e;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 300;
+    letter-spacing: 0.3em;
+    font-family: 'Roboto', sans-serif;
     color: #3a3c49;
     text-transform: uppercase;
     padding: 50px 0;
 }
 
 /*sec1*/
-.sec1 .sec1_cont {overflow: hidden; position: relative; padding-top: 12%;}
-.sec1 .sec1_cont .sec1_txt {position: absolute; left: 0; top: 45%;}
+.sec1 .sec1_cont {
+    overflow: hidden;
+    position: relative;
+    padding-top: 12%;
+}
+
+.sec1 .sec1_cont .sec1_txt {
+    position: absolute;
+    left: 0;
+    top: 45%;
+}
+
 .sec1 .sec1_cont .sec1_txt h3 {
-    font-size: 55px; font-family:'CanvasLight'; 
-    font-weight: 600; 
+    font-size: 55px;
+    font-family: 'CanvasLight';
+    font-weight: 600;
     color: #3a3c49;
     width: 75%;
     line-height: 1.3;
     padding-bottom: 40px;
     letter-spacing: 0.01em;
-} 
+}
+
 .sec1 .sec1_cont .sec1_txt p {
-    width: 45%; 
-    font-size: 18px; 
+    width: 45%;
+    font-size: 18px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     color: #79726e;
     letter-spacing: 0.03em;
     padding-bottom: 25px;
 }
+
 .sec1 .sec1_cont .sec1_txt span {
     position: relative;
     color: #d43246;
@@ -67,46 +111,71 @@ body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, lege
     padding-left: 55px;
     cursor: pointer;
 }
+
 .sec1 .sec1_cont .sec1_txt span::before {
     content: '';
-    width: 30px; height: 1px; 
-    background: #d43246; 
-    position: absolute; left: 0; top: 7px;
+    width: 30px;
+    height: 1px;
+    background: #d43246;
+    position: absolute;
+    left: 0;
+    top: 7px;
 }
-.sec1 .sec1_cont .sec1_img {display: block; float: right; width: 40%;}
-.sec1 .sec1_cont .sec1_img img {max-width: 100%; }
+
+.sec1 .sec1_cont .sec1_img {
+    display: block;
+    float: right;
+    width: 40%;
+}
+
+.sec1 .sec1_cont .sec1_img img {
+    max-width: 100%;
+}
 
 
 /*section2*/
-.sec2 {position: relative; }
-.sec2 .sec2_img {display: block; width: 40%;}
-.sec2 .sec2_img img {max-width: 100%; }
+.sec2 {
+    position: relative;
+}
+
+.sec2 .sec2_img {
+    display: block;
+    width: 40%;
+}
+
+.sec2 .sec2_img img {
+    max-width: 100%;
+}
 
 .sec2 .sec2_txt {
-    position: absolute; left: 200px; top: -60px;
+    position: absolute;
+    left: 350px;
+    top: -60px;
 }
+
 .sec2 .sec2_txt h2 {
     font-size: 110px;
-    font-family:'CanvasRegular';
-    color: #fff;
+    font-family: 'CanvasRegular';
+    color: gray;
     white-space: nowrap;
     padding: 50px 0 0 60px;
 }
+
 .sec2 .sec2_txt h3 {
-    font-size: 50px; 
-    font-family:'CanvasLight';  
-    font-weight: 600; 
-    color: #3a3c49;
+    font-size: 50px;
+    font-family: 'CanvasLight';
+    font-weight: 600;
+    color: gray;
     letter-spacing: 0.01em;
     white-space: nowrap;
     padding: 10% 0 0 34%
-    
 }
+
 .sec2 .sec2_txt p {
-    font-size: 16px; 
+    font-size: 14px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
-    color: #79726e;  
+    color: #79726e;
     text-align: left;
     padding: 4% 0 0 35%;
     line-height: 1.7;
@@ -114,16 +183,19 @@ body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, lege
 
 .sec2 .sec2_study {
     position: relative;
-    width: 600px;
-    position: absolute; top: 50%; left: 46%;
-    display: flex;  
+    width: 800px;
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
-    font-size: 30px;
+    font-size: 25px;
     color: #7d7571;
-    font-family:'BentonModDisp-Light'; 
+    font-family: 'BentonModDisp-Light';
     letter-spacing: 0.15em;
 }
+
 .sec2 .sec2_study i {
     font-size: 6px;
     color: #999;
@@ -131,38 +203,110 @@ body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, lege
     vertical-align: 2px;
 }
 
+/* #section2 animation   */
+#section2 .sec2_img img {
+    opacity: 0;
+}
+
+#section2 .sec2 h2 {
+    opacity: 0;
+}
+
+#section2 .sec2 h3 {
+    opacity: 0;
+}
+
+#section2 .sec2 p {
+    opacity: 0;
+}
+
+#section2 .sec2 .sec2_study {
+    opacity: 0;
+}
+
+#section2.show .sec2_img img {
+    animation: fadeInUp .84s 0.4s ease forwards;
+}
+
+#section2.show .sec2 h2 {
+    animation: fadeInUp .84s 0.8s ease forwards;
+}
+
+#section2.show .sec2 h3 {
+    animation: fadeInUp .84s 1.2s ease forwards;
+}
+
+#section2.show .sec2 p {
+    animation: fadeInUp .84s 1.6s ease forwards;
+}
+
+#section2.show .sec2 .sec2_study {
+    animation: fadeInUp .84s 2.0s ease forwards;
+}
+
+
 /* section3 */
 .sec3 h2 {
-    font-size: 80px;  
-    font-family:'CanvasBlack'; 
-    color: #3a3c49; 
+    font-size: 80px;
+    font-family: 'CanvasBlack';
+    color: #3a3c49;
     text-align: center;
     padding-bottom: 60px;
     letter-spacing: 0.05em;
 }
+
 .sec3 .sec3_moc {
-    position: relative; 
+    position: relative;
     display: flex;
-    flex-wrap: wrap; justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
+
 .sec3 .mockup {
-    position: relative; 
-    width: 47.5%; 
+    position: relative;
+    width: 47.5%;
     float: left;
 }
-.sec3 .mockup:nth-child(even){margin-right: 0;}
-.sec3 .mockup:nth-child(2) {margin-top: 34vh;}
-.sec3 .mockup:nth-child(3) {margin-top: -8vh;}
-.sec3 .mockup:nth-child(4) {margin-top: 28vh;}
-.sec3 .mockup:nth-child(5) {margin-top: -8vh;}
-.sec3 .mockup:nth-child(6) {margin-top: 28vh;}
 
-.sec3 .mockup .sec3_img {overflow: hidden;}
-.sec3 .mockup .sec3_img img {width: 100%; transform: scale(1); transition: all .8s cubic-bezier(.37, .16, .12, 1);}
-.sec3 .mockup .sec3_img img:hover {transform: scale(1.1); transition: all .8s cubic-bezier(.37, .16, .12, 1);}
+.sec3 .mockup:nth-child(even) {
+    margin-right: 0;
+}
 
-.sec3 .mockup .sec3_tit .titAni.White{
-    position: relative; z-index: 10;
+.sec3 .mockup:nth-child(2) {
+    margin-top: 34vh;
+}
+
+.sec3 .mockup:nth-child(3) {
+    margin-top: -8vh;
+}
+
+.sec3 .mockup:nth-child(4) {
+    margin-top: 28vh;
+}
+
+.sec3 .mockup:nth-child(5) {
+    margin-top: -8vh;
+}
+
+.sec3 .mockup:nth-child(6) {
+    margin-top: 28vh;
+}
+
+
+.sec3 .mockup .sec3_img img {
+    width: 100%;
+    transform: scale(1);
+    transition: all .8s cubic-bezier(.37, .16, .12, 1);
+}
+
+.sec3 .mockup .sec3_img img:hover {
+    transform: scale(1.1);
+    transition: all .8s cubic-bezier(.37, .16, .12, 1);
+}
+
+.sec3 .mockup .sec3_tit .titAni.White {
+    position: relative;
+    z-index: 10;
     font-size: 40px;
     font-family: 'Sulphur Point', sans-serif;
     font-weight: 600;
@@ -173,6 +317,7 @@ body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, lege
     top: 15px;
     text-transform: uppercase;
 }
+
 .sec3 .sec3_moc .mockup .desc {
     position: relative;
     background: #7d7571;
@@ -180,44 +325,91 @@ body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, lege
     margin-left: 5vw;
     margin-top: -2vw;
     padding: 1.5vw;
-    position: relative; 
+    position: relative;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     white-space: nowrap;
 }
-.sec3 .sec3_moc .mockup .desc a {color: #fff; cursor: pointer; font-size: 15px; font-weight: bold;}
+
+.sec3 .sec3_moc .mockup .desc a {
+    color: #fff;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
 .sec3 .sec3_moc .mockup .desc span {
-    color: #666363;
-    position: absolute; top: 30px; right: 35px;
+    color: #fff;
+    position: absolute;
+    top: 30px;
+    right: 35px;
     cursor: pointer;
 }
 
+.sec3 .sec3_moc .mockup .info {
+    
+}
+
+/* #section3 animation   */
+#section3 .sec3 h2 {opacity: 0;}
+#section3 .sec3 .mockup:nth-child(1) {opacity: 0;}
+#section3 .sec3 .mockup:nth-child(2) {opacity: 0;}
+#section3 .sec3 .mockup:nth-child(3) {opacity: 0;}
+#section3 .sec3 .mockup:nth-child(4) {opacity: 0;}
+#section3 .sec3 .mockup:nth-child(5) {opacity: 0;}
+#section3 .sec3 .mockup:nth-child(6) {opacity: 0;}
+
+#section3.show .sec3 h2 {animation: fadeInUp .84s ease forwards;}
+#section3.show .sec3 .mockup:nth-child(1) {animation: fadeInUp .84s 0.6s ease forwards;}
+#section3.show .sec3 .mockup:nth-child(2) {animation: fadeInUp .84s 1.2s ease forwards;}
+#section3.show .sec3 .mockup:nth-child(3) {animation: fadeInUp .84s 1.8s ease forwards;}
+#section3.show .sec3 .mockup:nth-child(4) {animation: fadeInUp .84s 2.4s ease forwards;}
+#section3.show .sec3 .mockup:nth-child(5) {animation: fadeInUp .84s 3.0s ease forwards;}
+#section3.show .sec3 .mockup:nth-child(6) {animation: fadeInUp .84s 3.6s ease forwards;}
+
+
 
 /*section4*/
-.sec4 {position: relative;}
-.sec4 .sec4_img {display: block; width: 40%;}
-.sec4 .sec4_img img {max-width: 100%; }
-.sec4 .sec4_txt {
-    position: absolute; left: 200px; top: -90px;
+.sec4 {
+    position: relative;
 }
+
+.sec4 .sec4_img {
+    display: block;
+    width: 40%;
+}
+
+.sec4 .sec4_img img {
+    max-width: 100%;
+}
+
+.sec4 .sec4_txt {
+    position: absolute;
+    left: 200px;
+    top: -90px;
+}
+
 .sec4 .sec4_txt h2 {
     font-size: 110px;
-    font-family:'CanvasRegular'; 
-    color: #fff; 
+    font-family: 'CanvasRegular';
+    color: gray;
     white-space: nowrap;
     letter-spacing: -0.03em;
     padding-left: 5%;
 }
+
 .sec4 .sec4_txt h3 {
-    font-size: 120px;   
-    font-weight: 500; 
+    font-size: 120px;
+    font-weight: 500;
     font-family: 'CHONBUKL';
-    color: #fff;
+    color: gray;
     padding: 16% 0 0 35%;
     line-height: 0.7;
 }
+
 .sec4 .sec4_txt p {
-    font-size: 16px; 
+    font-size: 16px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     color: #79726e;
@@ -228,43 +420,68 @@ body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, lege
 
 .sec4 .sec4_skill {
     width: 600px;
-    position: absolute; bottom: 5%; left: 46%;
-    display: flex;  
+    position: absolute;
+    bottom: 5%;
+    left: 46%;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     font-size: 18px;
     font-weight: 300;
-    color:  #d43246;
+    color: #d43246;
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.05em;
     line-height: 1.7;
 
 }
-.sec4 .sec4_skill ul li {position: relative; padding-left: 50px;}
-.sec4 .sec4_skill ul li::before {
-    content: '';
-    width: 30px; height: 1px;
-    background: #d43246;
-    position: absolute; left: 0; top: 14px;
+
+.sec4 .sec4_skill ul li {
+    position: relative;
+    padding-left: 50px;
 }
 
-.sec6 {text-align: center;}
+.sec4 .sec4_skill ul li::before {
+    content: '';
+    width: 30px;
+    height: 1px;
+    background: #d43246;
+    position: absolute;
+    left: 0;
+    top: 14px;
+}
+
+.sec6 {
+    text-align: center;
+}
+
 .sec6 h2 {
-    font-size: 80px; 
-    font-weight: 600; 
-    font-family:'CanvasLight';
+    font-size: 80px;
+    font-weight: 600;
+    font-family: 'CanvasLight';
     color: #3a3c49;
     line-height: 1.0;
     letter-spacing: 0.03em;
     padding-bottom: 50px;
 }
+
 .sec6 span {
     font-size: 18px;
     color: #d43246;
     cursor: pointer;
 }
+
 .sec6 p {
     font-size: 12px;
     color: #79726e;
-   padding-top: 180px;
+    padding-top: 180px;
+}
+
+/* keyframes */
+@keyframes fadeInUp {
+    0% {opacity: 0; transform: translateY(200px);}
+    100% {opacity: 1; transform: translateY(0);}
+}
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
