--- a/css/rest.css
+++ b/css/rest.css
@@ -1,3 +1,8 @@
+
+body, div, ul, li, dl, dt, dd, ol, h1, h2, h3, h4, h5, h6, input, fieldset, legend, p, select, table, th, td, tr, textarea, button, form {margin: 0; padding: 0;}
+
+ul, ol, li {list-style: none;}
+
 /* 텍스트 애니메이션  */
 .titAni {
     position: relative;
@@ -37,8 +42,8 @@
     transform-origin: left top;
     transition: transform .6s cubic-bezier(.37, .16, .12, 1);
 }
-.titAni.White {color: #fff; text-shadow: 1px 1px 1px #999;}
-.titAni.White:hover {color: #606479;}
+.titAni.White {color: #606479; text-shadow: 1px 1px 1px #999;}
+.titAni.White:hover {color: #fff;}
 .titAni.White::before {background-color: #fff;}
 .titAni.White::after {background-color: #606479;}
 
